--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./potato_salad.html" target="_blank" rel="noopener noreferrer">Potato Salad</a>
+    <h1>Potato Salad</h1>
 </body>
 </html>
