--- a/recipes/potato_salad.html
+++ b/recipes/potato_salad.html
@@ -6,7 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Potato Salad</h1>
     <a href="./index.html" target="_blank" rel="noopener noreferrer">Home</a>
+    <h1>Potato Salad</h1>
+    <img src="./img/potato_salad.png" alt="A Potato Salad" height="300px" width="380px">
+    <h2>World's Best Potato Salad</h2>
+    <p>This best-ever potato salad is the creamiest, richest potato salad you will ever try. The secret is in the homemade dressing. I get nothing but raves every time I make this.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>6 Medium Potatoes</li>
+        <li>½ cup white sugar</li>
+        <li>2 large eggs, beaten</li>
+        <li>1 teaspoon cornstarch</li>
+        <li>salt to taste</li>
+        <li>1 (5 ounce) can of evaporated milk</li>
+        <li>½ cup vinegar</li>
+        <li>1 teaspoon prepared yellow mustard</li>
+        <li>¼ cup butter</li>
+        <li>1 cup mayonnaise</li>
+        <li>6 large hard-cooked eggs, diced</li>
+        <li>1 small onion, finely chopped</li>
+        <li>1 cup celery, chopped</li>
+        <li>1 teaspoon salt</li>
+    </ul>
 </body>
 </html>
