--- a/recipes/index.html
+++ b/recipes/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./potato_salad.html" target="_blank" rel="noopener noreferrer">Potato Salad</a>
+    <ul>
+        <li><a href="./potato_salad.html" target="_blank" rel="noopener noreferrer">Potato Salad</a></li>
+    </ul>
 </body>
 </html>
