--- a/recipes/index.html
+++ b/recipes/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./potato_salad.html" target="_blank" rel="noopener noreferrer">Potato Salad</a></li>
+        <li><a href="./smothered_chicken.html" target="_blank" rel="noopener noreferrer">Smothered Chicken</a></li>
+        <li><a href="./Grilled_whole_fish.html" target="_blank" rel="noopener noreferrer">Grilled Fish</a></li>
     </ul>
 </body>
 </html>
